# proberoute

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_INTERFACE.md  CITATION.cff  CLAIM_CRITERIA.md  DATA_SPEC.md  ENVIRONMENT.md  LICENSE_AND_COMPLIANCE.md  Makefile  PUBLIC_RELEASE_CHECKLIST.md  README.md  RESULTS_SCHEMA.md  VALIDATION_AND_TESTING.md  pyproject.toml  requirements-lock.txt  requirements-torch-cu128.txt  requirements.txt
MODULE_SPECS/: 00_SCOPE_GUARDRAILS.md  01_CONFIG_AND_CLI.md  02_DATA_PIPELINE.md  03_BACKBONE_WRAPPER.md  04_PROBE_SWEEP.md  05_ROUTER_AND_HEADS.md  06_MTP_MODEL_AND_LOSS.md  07_TRAINING_ORCHESTRATION.md  08_EVALUATION_AND_ANALYSIS.md  09_PLOTTING_AND_TABLES.md  10_PAPER_AUTOGENERATION.md  11_SYNTHETIC_STARGRAPH.md  12_RESULT_REGISTRY_AND_SELECTION.md  13_SMOKE_AND_FIXTURES.md
PAPER_TEMPLATES/: ABSTRACT_TEMPLATE.md  CLAIM_EVIDENCE_MATRIX_TEMPLATE.md  FIGURE_SPECS.md  PAPER_TEMPLATE.md  REFERENCES_STUB.bib  TABLE_SPECS.md
configs/: README.md  ablation_sparse_deephead_1b.yaml  ablation_sparse_warmup_1b.yaml  base.yaml  confirm_best_2p8b.yaml  confirm_best_410m_seed2.yaml  fallback_48gb.yaml  final_best_baseline_template.yaml  final_sparse_probe_init_1b.yaml  probe_1b.yaml  probe_2p8b.yaml  probe_410m.yaml  screen_dense_whs_probe_init_1b.yaml  screen_dense_whs_random_1b.yaml  screen_last_linear_1b.yaml  screen_last_mlp_1b.yaml  screen_sparse_probe_init_1b.yaml  screen_sparse_random_1b.yaml  smoke_local_tiny.yaml  synthetic_stargraph.yaml  synthetic_stargraph_probe.yaml
fixtures/: README.md  tiny_corpus.jsonl
paper/: README.md
(+83 files in other folders)
